Exchanged 100vw for 100% to prevent vertical overflow, changed page titles for SEO

--- a/src/style.css
+++ b/src/style.css
@@ -259,7 +259,7 @@ p {
 }
 
 .footer {
-  width: 100vw;
+  width: 100%;
   margin: 0 auto;
   margin-top: 10vw;
   background-color: rgba(30, 31, 61, 0.9);
@@ -441,7 +441,7 @@ p {
 
 .background {
   position: fixed;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   top: 0;
   left: 0;
